# rustledger

./: .gitignore  .typos.toml  Cargo.toml  Dockerfile  README.md  bernstein.yaml  deny.toml  flake.nix
.github/workflows/: bench.yml  cargo-vet-auto.yml  ci.yml  codeql.yml  compat.yml  docs-validate.yml  quality.yml  release-build.yml  release-publish.yml  wasm.yml
containers/compat/: Containerfile
crates/rustledger/: Cargo.toml
crates/rustledger-booking/: Cargo.toml
crates/rustledger-booking/src/: book.rs  interpolate.rs  lib.rs  pad.rs
crates/rustledger-core/: Cargo.toml
crates/rustledger-core/benches/: inventory_bench.rs
crates/rustledger-core/src/: amount.rs  cost.rs  directive.rs  display_context.rs  extract.rs  identifiers.rs  intern.rs  lib.rs
crates/rustledger-core/src/format/: helpers.rs  mod.rs  transaction.rs
crates/rustledger-core/src/inventory/: booking.rs  mod.rs
crates/rustledger-core/tests/: property_tests.rs
crates/rustledger-ffi-wasi/: Cargo.toml
crates/rustledger-ffi-wasi/src/: convert.rs  lib.rs  main.rs
crates/rustledger-ffi-wasi/src/types/: output.rs
crates/rustledger-importer/: Cargo.toml  README.md  build.rs
crates/rustledger-importer/src/: config.rs  csv_importer.rs  lib.rs  ofx_importer.rs  registry.rs  test_fixtures.rs  wasm.rs
crates/rustledger-importer/tests/: csv_amount_fixtures.rs  ofx_amount_fixtures.rs  wasm_importer_e2e.rs
crates/rustledger-importer/tests/fixtures/sample_stub/: Cargo.toml
crates/rustledger-importer/tests/fixtures/sample_stub/src/: lib.rs
crates/rustledger-loader/: Cargo.toml
crates/rustledger-loader/src/: cache.rs  dedup.rs  lib.rs  process.rs
crates/rustledger-loader/tests/: cache_env_var_test.rs  loader_test.rs
crates/rustledger-lsp/: Cargo.toml
crates/rustledger-lsp/src/: server.rs
crates/rustledger-lsp/src/handlers/: call_hierarchy.rs  code_actions.rs  definition.rs  document_links.rs  execute_command.rs  formatting.rs  inlay_hints.rs  semantic_tokens.rs  type_hierarchy.rs  utils.rs  workspace_symbols.rs
crates/rustledger-ops/: Cargo.toml
crates/rustledger-ops/src/: lib.rs  transfer.rs
crates/rustledger-parser/: Cargo.toml
crates/rustledger-parser/src/: lib.rs  parser.rs  winnow_parser.rs
crates/rustledger-plugin/: Cargo.toml  build.rs
crates/rustledger-plugin-types/: Cargo.toml  README.md
crates/rustledger-plugin-types/src/: lib.rs
crates/rustledger-plugin/src/: lib.rs  runtime.rs  sandbox.rs  wasm_dir_scan.rs
crates/rustledger-plugin/src/convert/: from_wrapper.rs  to_wrapper.rs
crates/rustledger-plugin/src/native/plugins/: capital_gains_classifier.rs  check_closing.rs
crates/rustledger-plugin/tests/: native_plugins_test.rs
crates/rustledger-query/: Cargo.toml
crates/rustledger-query/src/: price.rs
crates/rustledger-query/src/executor/: evaluation.rs  execution.rs  mod.rs  operators.rs  sort.rs  types.rs
crates/rustledger-query/src/executor/functions/: position.rs  util.rs
crates/rustledger-query/tests/: bql_integration_test.rs
crates/rustledger-validate/: Cargo.toml
crates/rustledger-validate/src/: lib.rs
crates/rustledger-validate/src/validators/: account.rs  balance.rs  transaction.rs
crates/rustledger-wasm/: CHANGELOG.md  Cargo.toml  beancount.d.ts  beancount_wasm.d.ts
crates/rustledger-wasm/bindings/: index.d.ts
crates/rustledger-wasm/src/: convert.rs  lib.rs  types.rs
crates/rustledger-wasm/tests/: wasm_meta.rs
crates/rustledger-wire-format-tests/: Cargo.toml
crates/rustledger-wire-format-tests/src/: lib.rs
crates/rustledger-wire-format-tests/tests/: equivalence.rs
crates/rustledger/benches/: v016_baseline.rs
crates/rustledger/src/cmd/: check.rs  mod.rs
crates/rustledger/src/cmd/doctor/: directories.rs  display_context.rs  missing_open.rs  stats.rs
crates/rustledger/src/cmd/extract_cmd/: config.rs  duplicate.rs  mod.rs  suggest.rs
crates/rustledger/src/cmd/lint/: mod.rs  transfers.rs
crates/rustledger/src/cmd/price/: discovery.rs  external.rs
crates/rustledger/src/cmd/query/: output.rs
crates/rustledger/src/cmd/report_cmd/: balances.rs  balsheet.rs  holdings.rs  income.rs  networth.rs
crates/rustledger/tests/: bean_price_compat.rs  cli_commands_test.rs  price_clobber_post_fetch.rs
docs/commands/: extract.md  price.md
docs/development/: import-roadmap.md
docs/guides/: importing.md
docs/reference/: architecture.md
docs/reference/adr/: 0004-ts-types-from-rust-dtos.md  index.md
examples/wasm-importer-csv-example/: Cargo.toml  README.md
examples/wasm-importer-csv-example/src/: lib.rs
packaging/rpm/: rustledger.spec
scripts/: check-plugin-test-quality.sh  compat-bql-test.py  compat-container-build.sh  regen-ts-bindings.sh  test-plugin-test-quality.sh
spec/tla/: Interpolation.cfg  Interpolation.tla
supply-chain/: config.toml
tests/compatibility/: bql-queries.toml
