[workspace]
resolver = "3"
members = [
  "crates/rustledger-core",
  "crates/rustledger-parser",
  "crates/rustledger-loader",
  "crates/rustledger-booking",
  "crates/rustledger-validate",
  "crates/rustledger-query",
  "crates/rustledger-plugin",
  "crates/rustledger-plugin-types",
  "crates/rustledger-importer",
  "crates/rustledger-ops",
  "crates/rustledger",
  "crates/rustledger-wasm",
  "crates/rustledger-ffi-wasi",
  "crates/rustledger-lsp",
  "crates/rustledger-wire-format-tests",
]
# Exclude wasm from default builds (requires wasm32 target)
default-members = [
  "crates/rustledger-core",
  "crates/rustledger-parser",
  "crates/rustledger-loader",
  "crates/rustledger-booking",
  "crates/rustledger-validate",
  "crates/rustledger-query",
  "crates/rustledger-plugin",
  "crates/rustledger-plugin-types",
  "crates/rustledger-importer",
  "crates/rustledger-ops",
  "crates/rustledger",
  "crates/rustledger-lsp",
  "crates/rustledger-wire-format-tests",
]

[workspace.package]
version = "0.15.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-only"
repository = "https://github.com/rustledger/rustledger"
homepage = "https://rustledger.github.io"
documentation = "https://docs.rs/rustledger-core"
keywords = ["beancount", "accounting", "finance", "double-entry", "ledger"]
categories = ["command-line-utilities", "finance", "parser-implementations"]
authors = ["Rustledger Contributors"]

[workspace.metadata.crane]
name = "rustledger"

[workspace.dependencies]
# Core
rust_decimal = { version = "1.42", features = ["serde"] }
# `js` feature is wasm32-only (cfg-gated inside jiff) and pulls in
# js-sys so jiff::Zoned::now() / Timestamp::now() work in browsers
# instead of panicking with "getting the current time in
# wasm32-unknown-unknown is not possible with just the standard library".
# No effect on native builds. Required by @rustledger/wasm consumers
# (see #925).
jiff = { version = "0.2", features = ["serde", "js"] }
glob = "0.3"
thiserror = "2"
anyhow = "1"

# Regex
regex = "1"

# Parsing
format_num_pattern = { version = "0.9.5", features = ["rust_decimal"] }
chumsky = "1.0.0-alpha.7"
miette = { version = "7", features = ["fancy"] }
logos = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
toml = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
rustyline = { version = "18", features = ["derive"] }
dirs = "6"
edit = "0.1"
shell-words = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasmtime = "45.0.0"
wasmtime-wasi = "45.0.0"
wat = "1"

# Parallelization
rayon = "1.12"

# Fast hashing
rustc-hash = "2"
blake3 = "1"

# Inline-storage collections (avoids heap allocation for small sizes)
smallvec = "1"

# Persistent (structurally-shared) collections — O(1) clone for tree-based
# vectors, used by Inventory.positions so JOURNAL-style row-per-snapshot
# patterns become O(N log N) instead of O(N²). See issue #1086.
#
# `imbl` is the maintained fork of `im` (which is dormant — last release
# Oct 2022 pinning `rand_core` 0.6 → `getrandom` 0.2). The Vector /
# HashMap / OrdMap APIs we use are identical between the two. Swapping
# removes the transitive `getrandom 0.2` pin, unblocking the upgrade to
# getrandom 0.4 (which the WASM `getrandom_backend = "wasm_js"` story
# requires for new browsers).
imbl = { version = "7", features = ["serde"] }

# Testing
proptest = "1"
criterion = "0.8"
insta = { version = "1", features = ["yaml"] }
rust_decimal_macros = "1.40"
tempfile = "3"

# Data formats
csv = "1"
ofxy = "0.2"

# HTTP
ureq = { version = "3", features = ["json"] }

# Compression/Archive (for Python WASI download)
flate2 = "1"
zip = "8"
sha2 = "0.11"

# Serialization (for cache)
rkyv = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# WASM getrandom support (needed for wasm32-unknown-unknown target)
getrandom = { version = "0.2", features = ["js"] }

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
ropey = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Internal crates
rustledger-core = { version = "0.15.0", path = "crates/rustledger-core" }
rustledger-parser = { version = "0.15.0", path = "crates/rustledger-parser" }
rustledger-loader = { version = "0.15.0", path = "crates/rustledger-loader" }
rustledger-booking = { version = "0.15.0", path = "crates/rustledger-booking" }
rustledger-validate = { version = "0.15.0", path = "crates/rustledger-validate" }
rustledger-query = { version = "0.15.0", path = "crates/rustledger-query" }
rustledger-plugin = { version = "0.15.0", path = "crates/rustledger-plugin", default-features = false }
rustledger-plugin-types = { version = "0.15.0", path = "crates/rustledger-plugin-types" }
rustledger-importer = { version = "0.15.0", path = "crates/rustledger-importer" }
rustledger-ops = { version = "0.15.0", path = "crates/rustledger-ops" }
rustledger-ffi-wasi = { version = "0.15.0", path = "crates/rustledger-ffi-wasi" }
rustledger-wasm = { version = "0.15.0", path = "crates/rustledger-wasm" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
# Allow cfg(kani) for Kani formal verification proofs
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
# Numeric cast warnings - we use standard patterns
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
# Allow common stylistic patterns
format_push_string = "allow"
default_trait_access = "allow"
unused_self = "allow"
ptr_arg = "allow"
match_same_arms = "allow"
or_fun_call = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
manual_let_else = "allow"
ref_option = "allow"
unnecessary_wraps = "allow"
# Allow multiple crate versions - we can't control transitive dependencies
multiple_crate_versions = "allow"

[profile.release]
lto = "thin"      # Full LTO causes Apple linker crash with long symbol names
codegen-units = 1
strip = true

# Linux-optimized profile with full LTO (use with: cargo build --profile release-linux)
# macOS keeps thin LTO due to Apple linker crash issues
[profile.release-linux]
inherits = "release"
lto = "fat"

# WASM-optimized profile (use with: cargo build --profile wasm-release)
[profile.wasm-release]
inherits = "release"
lto = "fat"          # Override `release`'s "thin" — WASM doesn't hit the Apple linker bug
opt-level = 3        # Speed over size (~21% larger, ~60% faster)
panic = 'abort'      # Smaller binary, no unwinding

[profile.dev]
# Faster builds in dev
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
