[package]
name = "rustledger-importer"
description = "Import framework for rustledger - extract transactions from bank files"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-core.workspace = true
rustledger-ops.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
format_num_pattern.workspace = true
csv.workspace = true
ofxy.workspace = true
chrono = "0.4"                      # ofxy exposes chrono::DateTime; needed for DateTime::format()

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
