[package]
name = "rustledger-importer"
description = "Import framework for rustledger - extract transactions from bank files"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-core.workspace = true
rustledger-ops.workspace = true
rustledger-plugin = { workspace = true, features = ["wasm-runtime"] }
rustledger-plugin-types.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
format_num_pattern.workspace = true
csv.workspace = true
ofxy.workspace = true
# WASM importer loader (wave 2.3b). Mirrors the sandboxing model used by
# rustledger-plugin's directive-plugin runtime. We depend on
# rustledger-plugin (not just -plugin-types) for `convert::wrapper_to_directive`
# — the canonical wire-format → host-Directive converter, shared with the
# directive plugin path.
wasmtime = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# `ofxy::body::Transaction::date_posted` returns `chrono::DateTime<Utc>`, so
# we need chrono in the dep tree to call its inherent `.format()` method.
# IMPORTANT: chrono types must NOT leak into this crate's public API — they
# are converted to `jiff::civil::Date` inside ofx_importer.rs at the boundary.
# When v1.0 ships, dropping ofxy or replacing it with a jiff-native OFX
# parser would let us remove chrono entirely.
chrono = "0.4"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
# WAT (WebAssembly text format) — used by wasm.rs unit tests to author
# tiny modules inline rather than shipping `.wasm` test fixtures.
wat = { workspace = true }

[lints]
workspace = true
