[package]
name = "rustledger-loader"
description = "Beancount file loader with include resolution and options parsing"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[features]
default = ["cache", "full"]

# Enable rkyv-based binary caching for faster loads
cache = ["dep:rkyv", "dep:blake3", "rustledger-parser/rkyv"]

# Full processing: booking + plugins + validation (like Python's loader.load_file())
full = ["booking", "plugins", "validation"]

# Individual processing features
booking = ["dep:rustledger-booking"]
plugins = ["dep:rustledger-plugin"]
validation = ["dep:rustledger-validate"]

# Plugin runtime features (passed through to rustledger-plugin)
native-plugins = ["plugins"]
python-plugins = ["plugins", "rustledger-plugin/python-plugins"]
wasm-plugins = ["plugins", "rustledger-plugin/wasm-runtime", "dep:rustledger-plugin-types"]

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
jiff.workspace = true
glob.workspace = true
rkyv = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
rustc-hash.workspace = true
rayon.workspace = true

# Optional processing dependencies
rustledger-booking = { workspace = true, optional = true }
rustledger-plugin = { workspace = true, optional = true, default-features = false }
rustledger-plugin-types = { workspace = true, optional = true }
rustledger-validate = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
rust_decimal_macros.workspace = true
jiff.workspace = true

[lints]
workspace = true
