[package]
name = "rustledger-ops"
description = "Pure operations on beancount directives — dedup, categorize, reconcile"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["beancount", "accounting", "dedup", "categorize"]
categories = ["finance"]
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-plugin-types.workspace = true
rust_decimal.workspace = true
jiff.workspace = true
blake3.workspace = true
regex.workspace = true
linfa = "0.8"
linfa-bayes = "0.8"
ndarray = "0.16"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
