[package]
name = "rustledger-parser"
description = "Beancount parser with error recovery and full syntax support"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[features]
default = ["rkyv"]
# Enable rkyv serialization for binary cache
rkyv = ["dep:rkyv", "rustledger-core/rkyv"]

[dependencies]
rustledger-core.workspace = true
logos.workspace = true
rust_decimal.workspace = true
serde.workspace = true
rkyv = { workspace = true, optional = true }

[dev-dependencies]
rust_decimal_macros = "1.40"
insta.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "parser_bench"
harness = false

[lints]
workspace = true
