[package]
name = "rustledger-plugin-types"
description = "WASM plugin interface types for rustledger - use in your plugin crate"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["beancount", "plugin", "wasm", "types"]
categories = ["data-structures", "wasm"]
authors.workspace = true
readme = "README.md"

# This crate is designed to compile to wasm32-unknown-unknown
# Keep dependencies minimal and WASM-compatible

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rmp-serde = { workspace = true }

[lints]
workspace = true
