[package]
name = "rustledger-query"
description = "Beancount query engine (BQL) with SQL-like syntax for ledger queries"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rustledger-loader.workspace = true
chumsky.workspace = true
rust_decimal.workspace = true
jiff.workspace = true
thiserror.workspace = true
regex = "1"
rustc-hash.workspace = true
rayon.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
insta.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "query_bench"
harness = false

[lints]
workspace = true
