[package]
name = "rustledger-wasm"
description = "Beancount WebAssembly bindings for JavaScript/TypeScript"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugins", "completions"]
## Include native plugin support (runPlugin, listPlugins)
plugins = ["dep:rustledger-plugin"]
## Include BQL query completions (bqlCompletions)
completions = []
## TypeScript type export (#1218 Phase 1) -- enables the `#[derive(TS)]`
## attributes on the wire-format DTOs. Pulls in ts-rs as an optional
## host-only dep (declared under `[target.'cfg(not(...))'.dependencies]`
## below, so `cargo build --target wasm32-unknown-unknown --features
## ts-export` hard-fails on the missing `ts-rs` crate -- intentional,
## the export is host-only by design). Triggered from CI via
## `scripts/regen-ts-bindings.sh` (which runs `cargo test --features
## ts-export` and the post-process script) so contributors regenerate
## the .d.ts whenever a DTO changes. Not part of any default build.
ts-export = ["dep:ts-rs"]

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rustledger-booking.workspace = true
rustledger-validate.workspace = true
rustledger-query.workspace = true
rustledger-loader.workspace = true
rustledger-plugin = { workspace = true, default-features = false, optional = true }
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
rkyv.workspace = true
sha2.workspace = true
jiff.workspace = true
getrandom.workspace = true

# Better panic messages in WASM
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
# TypeScript export (#1218 Phase 1): ts-rs is a host-only optional dep,
# opt-in via the `ts-export` feature above. With the feature on,
# `cargo test -p rustledger-wasm --features ts-export` writes per-type
# .d.ts files under `crates/rustledger-wasm/bindings/` (gitignored
# intermediate output -- the post-processed `bindings/index.d.ts`
# *is* checked in as the public TS API surface). Without the feature,
# `ts-rs` is not in the dep graph and the `#[derive(TS)]` derives
# compile out via `#[cfg_attr]`. Default builds and the wasm32 target
# are unaffected.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ts-rs = { version = "12.0.1", optional = true }


# Host-only dev-dep: the wire-format tests that need it are
# `#[cfg(not(target_arch = "wasm32"))]` since they only validate
# target-independent JSON shape — keep `serde_json` off the wasm32
# test compile to avoid pulling extra dep chains.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
serde_json.workspace = true

# `getrandom` 0.3 (pulled in transitively via `imbl` → `rand_xoshiro`
# since #1195) requires both the `wasm_js` Cargo feature AND a
# RUSTFLAGS cfg (`--cfg getrandom_backend="wasm_js"`, set in
# `.cargo/config.toml` at the workspace root) before it will compile
# on `wasm32-unknown-unknown`. A direct dep here forces Cargo to union
# the feature into the transitive getrandom 0.3 instance.
[target.wasm32-unknown-unknown.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
# Optimize for speed (aligned with profile.wasm-release opt-level = 3)
# Feature flags required for newer Rust WASM output:
# - bulk-memory: memory.copy/memory.fill instructions
# - nontrapping-float-to-int: i32.trunc_sat_f64_s and similar
wasm-opt = [
  "-O3",
  "--enable-mutable-globals",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lints]
workspace = true
