[package]
name = "rustledger-wire-format-tests"
description = "Cross-binding wire-format equivalence tests -- pins FFI-WASI and WASM JSON shapes against shared fixtures (issue #1200)"
# Never published — kept at 0.0.0 to make the unpublished intent explicit.
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
publish = false

# No `[lib]` / `[[bin]]` declared on purpose: this crate exists only
# to host the integration tests under `tests/`, and cargo auto-detects
# the empty `src/lib.rs` (which has to exist so `tests/` can `use` the
# dev-dependencies). Declaring `[lib]` explicitly would force cargo to
# require `src/lib.rs` even when only `Cargo.toml` is present — which
# breaks the `Update Exemptions` workflow, since it fetches Cargo.toml
# files from PRs without their `src/`.

[dev-dependencies]
rustledger-core.workspace = true
rustledger-ffi-wasi.workspace = true
rustledger-wasm.workspace = true
serde_json.workspace = true
# `rust_decimal` is required by the `dec!` macro expansion — the
# macro emits code that names `rust_decimal::Decimal` directly,
# so a transitive dep through `rustledger-core` isn't enough.
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

[lints]
workspace = true
