[package]
name = "rustledger"
description = "Drop-in replacement for Beancount. Pure Rust, 10-30x faster."
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"
default-run = "rledger"

[lib]
bench = false

[features]
default = ["python-plugin-wasm"]
# Enable Python plugin support via WASM sandbox (adds ~30s to build time)
# This allows running existing Python beancount plugins
python-plugin-wasm = ["rustledger-plugin/python-plugins", "rustledger-loader/wasm-plugins", "rustledger-loader/python-plugins"]

# Primary binary - unified CLI with subcommands
[[bin]]
name = "rledger"
path = "src/bin/rledger.rs"

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rustledger-loader.workspace = true
rustledger-booking.workspace = true
rustledger-validate.workspace = true
rustledger-query.workspace = true
rustledger-plugin.workspace = true
rustledger-ops.workspace = true
rustledger-importer.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
rustyline.workspace = true
dirs.workspace = true
edit.workspace = true
shell-words.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
miette.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
format_num_pattern.workspace = true
glob.workspace = true
jiff.workspace = true
ureq.workspace = true
sha2.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
criterion.workspace = true
tempfile.workspace = true
insta.workspace = true

[[bench]]
name = "pipeline_bench"
harness = false

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rustledger-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rustledger-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rustledger-v{ version }-{ target }.zip"
pkg-fmt = "zip"
